<resources>
    <string name="app_name">WeatherAppTrain</string>
    <string name="today">Today</string>
    <string name="mon_june">mon june 17</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="persent_twenty_five">25°С</string>
    <string name="items">H:27 L:18</string>
    <string name="twenty_two_percent">22%</string>
    <string name="humidity">Humidity</string>
    <string name="eighteen_percent">18%</string>
    <string name="rain">Rain</string>
    <string name="twelve_km_hour">12 km/h</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="next_seven_days">Next 7 days</string>
    <string name="tomorrow">Tomorrow</string>

</resources>