<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_1"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mon_june"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/background_2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@tools:sample/avatars"
                    app:srcCompat="@drawable/cloudy_sunny" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mostly_cloudy"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/persent_twenty_five"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="43sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@tools:sample/avatars"
                            app:srcCompat="@drawable/umbrella" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/eighteen_percent"
                            android:textAlignment="center"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rain"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView311"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@tools:sample/avatars"
                            app:srcCompat="@drawable/wind" />

                        <TextView
                            android:id="@+id/textView811"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/twelve_km_hour"
                            android:textAlignment="center"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView911"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView31"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@tools:sample/avatars"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/textView81"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/twenty_two_percent"
                            android:textAlignment="center"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView91"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/today" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/next_seven_days" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>